--- a/src/main/resources/static/sass/home.sass
+++ b/src/main/resources/static/sass/home.sass
@@ -46,6 +46,8 @@
 
 .article-first-page
   height: 50%
+  width: 100%
+
 
 .article-link
   width: 100%
@@ -53,11 +55,10 @@
   display: flex
   flex-direction: column
 
-
   .card-title
-    color: $primary-color
     font-weight: bold
     font-size: 32px
+
 
 #CardFirstPage
   height: 420px
