--- a/src/main/resources/static/sass/styles.sass
+++ b/src/main/resources/static/sass/styles.sass
@@ -132,3 +132,11 @@ $btn-text-color-active: $quaternary-color
     background-position: 100% 50%
   100%
     background-position: 0 50%
+
+
+#MainContent
+  min-height: 100vh
+  margin-top: 8rem
+
+  @media (max-width: 768px)
+    margin-top: 9rem
