--- a/src/main/resources/templates/articles/article-new.html
+++ b/src/main/resources/templates/articles/article-new.html
@@ -58,7 +58,7 @@
 </div>
 
 <!-- Main Content -->
-<div class="container bg-light p-3" style="margin-top: 8em">
+<div class="container bg-light p-3" id="MainContent">
 
     <!-- Title -->
     <h1 class="fw-bold text-dark display-5 text-center">Criar novo artigo</h1>
