--- a/src/main/resources/templates/articles/detail.html
+++ b/src/main/resources/templates/articles/detail.html
@@ -59,7 +59,7 @@
 </div>
 
 <!-- Main Content -->
-<div class="container bg-light p-3" style="margin-top: 8em;">
+<div class="container bg-light p-3" id="MainContent">
 
     <!-- Article -->
 
