--- a/src/main/resources/templates/articles/edit.html
+++ b/src/main/resources/templates/articles/edit.html
@@ -60,7 +60,7 @@
 </div>
 
 <!-- Main Content -->
-<div class="container" style="min-height: 100vh; margin-top: 8rem">
+<div class="container" id="MainContent">
     <div class="row">
         <div class="col-md-8 offset-md-2">
             <h1 class="text-center">Editar Notícia</h1>
