--- a/src/main/resources/templates/articles/list.html
+++ b/src/main/resources/templates/articles/list.html
@@ -58,7 +58,7 @@
 </div>
 
 <!-- Main Content -->
-<div class="container bg-light p-5" style="margin-top: 8em; min-height: 100vh">
+<div class="container bg-light p-5" id="MainContent">
 
     <!-- Title -->
     <h1 class="text-center text-uppercase fw-bold">Artigos</h1>
