--- a/src/main/resources/templates/edition/new.html
+++ b/src/main/resources/templates/edition/new.html
@@ -46,7 +46,7 @@
 </div>
 
 <!-- Main content -->
-<div class="container mt-5">
+<div class="container" id="MainContent">
 
     <!-- Form to create a new edition -->
     <div class="row">
