--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -19,27 +19,65 @@
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            <a class="navbar-brand fw-bold text-center" href="/">
-                Jornal IF
+
+            <!-- page home -->
+            <a class="navbar-brand text-center fw-bold" href="/" th:if="${currentUrl == '/'}">
+                <img src="/img/logo.svg" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
             </a>
-            <form class="d-flex form-search">
+
+            <!-- page articles -->
+            <a class="navbar-brand text-center fw-bold" href="/articles" th:if="${currentUrl == '/articles'}">
+                <img src="/img/logo.svg" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
+                <span class="d-none d-sm-inline">- Artigos</span>
+            </a>
+
+            <!-- page categories -->
+            <a class="navbar-brand text-center fw-bold" href="/categories" th:if="${currentUrl == '/categories'}">
+                <img src="/img/logo.svg" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
+                <span class="d-none d-sm-inline">- Categorias</span>
+            </a>
+
+            <!-- page editions -->
+            <a class="navbar-brand text-center fw-bold" href="/editions" th:if="${currentUrl == '/editions'}">
+                <img src="/img/logo.svg" alt="Logo" width="70" height="70" class="d-inline-block align-text-top">
+                <span class="d-none d-sm-inline">- Edições</span>
+            </a>
+
+            <form class="d-flex form-search" th:action="@{/articles/search}" method="get">
 
                 <!-- Search input for md screens-->
-                <div class="input-group d-none d-sm-flex">
-                    <input type="search" class="form-control" placeholder="Pesquisar" aria-label="Pesquisar">
+                <div class="input-group d-none d-sm-flex position-relative">
+                    <input type="search" class="form-control" placeholder="Pesquisar" name="query"
+                           id="searchInputDesktop"
+                           aria-label="Pesquisar" aria-describedby="searchSuggestionsDesktop"
+                           oninput="updateSuggestions(this.value)">
                     <button class="btn btn-search" type="submit">
                         <i class="bi bi-search"></i>
                     </button>
+                    <!-- Search suggestions for md screens -->
+                    <div id="searchSuggestionsDesktop" class="search-suggestions d-none d-sm-block"
+                         style="
+                            position: absolute;
+                            width: 100%;
+                            top: 100%;
+                            left: 0;
+                            right: 0;
+                            background-color: #fff;
+                            border: 1px solid #ccc;
+                            box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+                            border-top: none;
+                            z-index: 1000;
+                            display: none;"
+                    ></div>
                 </div>
 
                 <!-- Search input for sm screens-->
                 <div class="input-group d-block d-sm-none">
                     <!-- offcanvas search -->
-                    <button class="btn btn-search rounded-pill" type="button" data-bs-toggle="offcanvas" data-bs-target="#searchNav"
+                    <button class="btn btn-search rounded-pill" type="button" data-bs-toggle="offcanvas"
+                            data-bs-target="#searchNav"
                             aria-controls="searchNav">
-                        <a href="/articles/search" class="text-decoration-none text-white">
-                            <i class="bi bi-search"></i>
-                        </a>
+                        <i class="bi bi-search"></i>
                     </button>
                     <div class="offcanvas offcanvas-end" id="searchNav">
                         <div class="offcanvas-header">
@@ -48,23 +86,29 @@
                                     aria-label="Close"></button>
                         </div>
                         <div class="offcanvas-body">
-                            <input type="search" class="form-control" placeholder="O que você procura?" aria-label="Pesquisar">
+                            <input type="search" class="form-control" placeholder="O que você procura?"
+                                   name="query" oninput="updateSuggestions(this.value)" aria-label="Pesquisar" aria-describedby="searchSuggestionsMobile">
                         </div>
                     </div>
                 </div>
 
             </form>
+
+            <!-- Search suggestions for sm screens -->
+            <div id="searchSuggestionsMobile" class="search-suggestions d-block d-sm-none"></div>
+
             <div class="offcanvas offcanvas-start" id="navbarNav">
                 <div class="offcanvas-header">
                     <h5 class="offcanvas-title">Menu</h5>
-                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas"
+                            aria-label="Close"></button>
                 </div>
                 <div class="offcanvas-body">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
                             <a class="nav-link" href="/">Início</a>
                         </li>
-                        <li class="nav-item">
+                        <li class="nav-item" sec:authorize="!hasRole('ROLE_ADMIN') and !hasRole('ROLE_NEWS')">
                             <a class="nav-link" href="/articles">Artigos</a>
                         </li>
 
@@ -93,9 +137,11 @@
                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Categorias
                                 </a>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink" th:each="category : ${categories}">
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink"
+                                    th:each="category : ${categories}">
                                     <li>
-                                        <a class="dropdown-item" th:href="@{'/categories/' + ${category.id}}" th:text="${category.name}"></a>
+                                        <a class="dropdown-item" th:href="@{'/categories/' + ${category.id}}"
+                                           th:text="${category.name}"></a>
                                     </li>
                                 </ul>
                             </div>
@@ -103,7 +149,8 @@
                         </li>
 
                         <!-- Editions for ROLE_NEWS -->
-                        <li class="nav-item" sec:authorize="hasRole('ROLE_ADMIN') and isAuthenticated()">
+                        <li class="nav-item"
+                            sec:authorize="hasRole('ROLE_ADMIN') and isAuthenticated()">
                             <div class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                    data-bs-toggle="dropdown" aria-expanded="false">
@@ -121,16 +168,18 @@
                         </li>
 
                         <!-- List editions -->
-                        <li class="nav-item">
+                        <li class="nav-item" sec:authorize="!hasRole('ROLE_ADMIN') and !hasRole('ROLE_NEWS')">
 
                             <div class="dropdown">
                                 <a class="nav-link dropdown-toggle" href="#" role="button" id="dropdownMenuLink"
                                    data-bs-toggle="dropdown" aria-expanded="false">
                                     Edições
                                 </a>
-                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink" th:each="edition : ${editions}">
+                                <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink"
+                                    th:each="edition : ${editions}">
                                     <li>
-                                        <a class="dropdown-item" th:href="@{'/editions/' + ${edition.id}}" th:text="${edition.name}"></a>
+                                        <a class="dropdown-item" th:href="@{'/editions/' + ${edition.id}}"
+                                           th:text="${edition.name}"></a>
                                     </li>
                                 </ul>
                             </div>
@@ -152,5 +201,36 @@
 
 <!-- Bootstrap JS -->
 <script src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+
+<!-- Custom JS -->
+<script>
+    // navbar.js
+
+    document.addEventListener('DOMContentLoaded', function () {
+        const searchInputDesktop = document.getElementById('searchInputDesktop');
+        const searchInputMobile = document.getElementById('searchInputMobile');
+        const searchSuggestionsDesktop = document.getElementById('searchSuggestionsDesktop');
+        const searchSuggestionsMobile = document.getElementById('searchSuggestionsMobile');
+
+        function updateSuggestions(query) {
+            fetch(`/articles/search/?query=${query}`)
+                .then(response => response.json())
+                .then(data => {
+                    searchSuggestionsDesktop.innerHTML = '';
+                    searchSuggestionsMobile.innerHTML = '';
+
+                    data.forEach(suggestion => {
+                        const suggestionElement = document.createElement('a');
+                        suggestionElement.classList.add('search-suggestion');
+                        suggestionElement.href = `/articles/search?query=${suggestion}`;
+                        suggestionElement.textContent = suggestion;
+
+                        searchSuggestionsDesktop.appendChild(suggestionElement.cloneNode(true));
+                        searchSuggestionsMobile.appendChild(suggestionElement.cloneNode(true));
+                    });
+                });
+        }
+    })
+</script>
 </body>
 </html>
