--- a/src/main/resources/static/css/login.css
+++ b/src/main/resources/static/css/login.css
@@ -109,6 +109,16 @@
     background-position: 0 50%;
   }
 }
+#MainContent {
+  min-height: 100vh;
+  margin-top: 8rem;
+}
+@media (max-width: 768px) {
+  #MainContent {
+    margin-top: 9rem;
+  }
+}
+
 body {
   display: flex;
   justify-content: center;
