--- a/src/main/resources/templates/edition/edit.html
+++ b/src/main/resources/templates/edition/edit.html
@@ -45,7 +45,7 @@
 </div>
 
 <!-- Main content -->
-<div class="container" style="margin-top: 8rem; min-height: 100vh">
+<div class="container" id="MainContent">
     <div class="row">
         <div class="col-md-12">
             <h1 class="text-center">Editar Edição</h1>
