--- a/src/main/resources/templates/edition/list.html
+++ b/src/main/resources/templates/edition/list.html
@@ -56,7 +56,7 @@
 </div>
 
 <!-- Main content -->
-<div class="container" style="margin-top: 8rem; min-height: 100vh">
+<div class="container" id="MainContent">
     <div class="row">
         <div class="col-md-12">
             <h1 class="text-center">Edições</h1>
