--- a/src/main/resources/templates/edition/view.html
+++ b/src/main/resources/templates/edition/view.html
@@ -56,7 +56,7 @@
 </div>
 
 <!-- Main content -->
-<div class="container" style="margin-top: 8rem; min-height: 100vh">
+<div class="container" id="MainContent">
     <div class="row">
         <div class="col-md-12">
             <h1 th:text="${edition.name}" class="display-3 fw-bold text-center"></h1>
@@ -74,13 +74,13 @@
     <div class="row mt-3">
         <div class="col-md-12">
             <div class="list-group list-group-flush">
-                <a th:each="article : ${edition.articles}" th:href="@{/articles/{id}(id=${article.id})}" class="list-group item list-group-item-action">
+                <a th:each="article : ${articles}" th:href="@{/articles/{id}(id=${article.id})}" class="list-group item list-group-item-action text-decoration-none">
                     <div class="d-flex w-100 justify-content-between">
-                        <h5 class="mb-1" th:text="${article.title}"></h5>
+                        <h3 class="mb-1 fw-bold" th:text="${article.title}" style="color: #f26a2e"></h3>
                         <small th:text="${#temporals.format(article.dateCreated, 'dd/MM/yyyy')}" class="text-muted"></small>
                     </div>
-                    <p class="mb-1" th:text="${article.subtitle}"></p>
-                    <small th:text="${article.author}" class="text-muted"></small>
+                    <p class="mb-1 text-uppercase" th:text="${article.subtitle}"></p>
+                    <small th:text="${article.author}" class="text-muted fst-italic"></small>
                 </a>
             </div>
         </div>
