--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -16,7 +16,7 @@
 <body class="bg-login">
 
 <!-- main content -->
-<div class="container bg-light p-3">
+<div class="container bg-light p-3" id="MainContent">
     <div class="row justify-content-center mt-5">
 
         <!-- mensagem de erro -->
