--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -18,7 +18,7 @@
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <!-- Profile -->
-<div class="container">
+<div class="container" id="MainContent">
     <div class="row">
         <div class="col-md-12">
             <h1 class="display-4">Perfil</h1>
@@ -31,6 +31,7 @@
                     <hr>
                     <div class="row">
                         <div class="col-md-6">
+
                         </div>
                     </div>
                 </div>
