--- a/src/main/resources/templates/reset-password.html
+++ b/src/main/resources/templates/reset-password.html
@@ -59,7 +59,7 @@
 </div>
 
 <!-- Main Content -->
-<div class="container bg-light" style="min-height: 100vh; margin-top: 7.5rem">
+<div class="container bg-light" id="MainContent">
     <div class="row justify-content-center">
         <div class="col-md-6">
             <div class="card">
