--- a/src/main/resources/templates/categories/list.html
+++ b/src/main/resources/templates/categories/list.html
@@ -1,12 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jornal IF - Categorias</title>
-
+    <title>Jornal IF - Início</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.css">
+    <link rel="stylesheet" href="webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="/css/home.css">
+    <link rel="stylesheet" href="/css/navbar.css">
+    <link rel="stylesheet" href="/css/footer.css">
 </head>
 <body>
+
+<!-- advertisement and navbar -->
+<div class="fixed-top" id="header">
+
+    <div class="container-fluid bg-white p-0">
+        <p class="text-uppercase text-center text-muted fw-bold mb-0">
+            grêmio de representação estudantil rupestre - 2024
+        </p>
+    </div>
+
+    <!-- Admin -->
+    <div class="container-fluid bg-light p-0">
+        <p sec:authorize="hasRole('ROLE_ADMIN')" class="text-uppercase text-center text-muted fw-bold mb-0">
+            Você está logado como administrador
+        </p>
+    </div>
+
+    <!-- News Editor -->
+    <div sec:authorize="hasRole('ROLE_NEWS')">
+        <div class="container-fluid bg-light p-0">
+            <p class="text-uppercase text-center text-muted fw-bold mb-0">
+                Você está logado como editor de notícias.
+            </p>
+        </div>
+    </div>
+
+    <!-- Not logged -->
+    <div sec:authorize="!isAuthenticated()" class="d-none d-md-block">
+        <div class="container-fluid bg-light p-0">
+            <p class="text-uppercase text-center text-muted fw-bold mb-0">
+                <strong>Você não possui uma conta.</strong>
+                Faça <a href="/login" class="text-decoration-none">login</a> ou <a href="/register" class="text-decoration-none">cadastre-se</a>
+            </p>
+        </div>
+    </div>
+
+    <!-- Navbar -->
+    <div th:replace="~{fragments/navbar :: navbar}"></div>
+
+</div>
+
+<!-- Title -->
+<div class="container-fluid bg-light py-5">
+    <div class="container">
+        <h1 class="text-center text-uppercase fw-bold">Categorias</h1>
+    </div>
+</div>
 
 </body>
 </html>
