--- a/src/main/resources/templates/forgot-password.html
+++ b/src/main/resources/templates/forgot-password.html
@@ -20,7 +20,8 @@
     <div class="row justify-content-center mt-5">
 
         <!-- mensagem de erro -->
-        <div th:if="${param.error}" th:text="${param.error}" class="alert alert-danger col-md-6 text-center">
+        <div th:if="${param.error}" class="alert alert-danger col-md-6 text-center">
+            <p th:text="${param.error}"></p>
         </div>
 
         <!-- formulário de login -->
