--- a/src/main/resources/templates/articles/article-new.html
+++ b/src/main/resources/templates/articles/article-new.html
@@ -9,6 +9,8 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.css">
     <link rel="stylesheet" href="/webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
+    <!-- Markdown CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.css">
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/footer.css">
@@ -83,8 +85,8 @@
 
         <!-- Content -->
         <div class="mb-3">
-            <label for="content" class="form-label">Conteúdo</label>
-            <textarea class="form-control" id="content" name="content" rows="10" th:field="*{content}" required></textarea>
+            <label for="content" class="form-label">Conteúdo (Markdown)</label>
+            <textarea class="form-control" id="content" name="content" rows="10" th:field="*{content}"></textarea>
         </div>
 
         <!-- Image -->
@@ -121,6 +123,16 @@
 
 <!-- Bootstrap JS -->
 <script src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/simplemde/latest/simplemde.min.js"></script>
 
+<script>
+    var simplemde = new SimpleMDE({
+        element: document.getElementById("content"),
+        forceSync: true  // Isso faz com que o SimpleMDE mantenha o textarea atualizado automaticamente
+    });
+    document.querySelector('form').addEventListener('submit', function() {
+        document.getElementById('content').value = simplemde.value();
+    });
+</script>
 </body>
 </html>
