--- a/src/main/resources/templates/categories/view.html
+++ b/src/main/resources/templates/categories/view.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="/webjars/bootstrap/5.3.3/css/bootstrap.css">
     <link rel="stylesheet" href="webjars/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/home.css">
     <link rel="stylesheet" href="/css/navbar.css">
     <link rel="stylesheet" href="/css/footer.css">
 </head>
@@ -55,29 +54,49 @@
 
 </div>
 
-<!-- Title -->
-<div class="container-fluid bg-light py-5">
-    <div class="container">
-        <h1 class="text-center text-uppercase fw-bold">Categorias</h1>
-        <p class="text-center text-muted">Clique em uma categoria para ver as notícias relacionadas</p>
-    </div>
-</div>
+<!-- Main Content -->
+<div class="container-fluid py-5" id="MainContent">
 
-<!-- Categories -->
-<div class="container py-5">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card mb-3">
-                <div class="card-body" th:each="category : ${categories}">
-                    <h5 class="card-title text-uppercase fw-bold" th:text="${category.name}">Categoria</h5>
-                    <p class="card-text text-muted" th:text="${category.description}">Descrição</p>
-                    <p class="card-text text-muted" th:text="${category.articles.size()}">Quantidade de notícias</p>
-                    <a href="#" class="btn btn-primary">Ver notícias</a>
+    <!-- Title -->
+    <div class="container bg-light p-2">
+        <h1 class="text-center text-uppercase fw-bold" th:text="${category.name}"></h1>
+        <h3 class="text-center text-muted" th:text="${category.description}"></h3>
+        <p class="text-center text-muted">Clique em uma notícia para ver mais detalhes</p>
+    </div>
+
+    <hr>
+
+    <!-- News -->
+    <div class="container" th:if="${category.articles.size() == 0}">
+        <div class="alert alert-warning text-center" role="alert">
+            Não há notícias cadastradas para esta categoria.
+        </div>
+    </div>
+    <div class="container" th:if="${category.articles.size() != 0}">
+        <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 gap-3">
+            <div class="card mb-3" th:each="article : ${category.articles}">
+                <img th:src="@{${article.getImageUrl()}}" class="card-img img-fluid mt-3" alt="imagem da notícia" style="aspect-ratio: 1/1; object-fit: cover">
+                <div class="card-body position-relative">
+                    <h5 class="card-title text-uppercase fw-bold" th:text="${article.title}">Título</h5>
+                    <p class="card-text text-muted" th:text="${article.subtitle}">Resumo</p>
+                    <div class="d-flex justify-content-between">
+                        <p class="card-text text-muted" th:text="${#temporals.format(article.dateCreated, 'dd/MM/yyyy')}">Data</p>
+                        <p class="card-text text-muted fw-bold" th:text="${article.author}">Autor</p>
+                    </div>
+                </div>
+                <div class="card-footer bg-white border-0">
+                    <a th:href="@{'/articles/' + ${article.id}}" class="btn btn-primary w-100">Ver notícia</a>
                 </div>
             </div>
         </div>
     </div>
+
 </div>
 
+<!-- Footer -->
+<div th:replace="~{fragments/footer :: footer}"></div>
+
+<!-- Bootstrap JS -->
+<script src="/webjars/bootstrap/5.3.3/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
