--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -108,7 +108,7 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                                     <li th:each="category : ${categories}">
-                                        <a class="dropdown-item" th:href="@{'/categories/' + ${category.id}}"
+                                        <a class="dropdown-item" th:href="@{'/category/' + ${category.id}}"
                                            th:text="${category.name}"></a>
                                     </li>
                                 </ul>
@@ -156,8 +156,10 @@
                         <li class="nav-item">
                             <a class="nav-link" href="/profile">Perfil</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="/logout">Logout</a>
+                        <li class="nav-item" sec:authorize="isAuthenticated()">
+                            <form th:action="@{/logout}" method="post">
+                                <button type="submit" class="btn btn-link nav-link">Sair</button>
+                            </form>
                         </li>
                     </ul>
                 </div>
