adicionando ajustes no app.properties

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -19,7 +19,7 @@
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <!-- Sidebar -->
-<div class="sidebar">
+<div class="sidebar d-none d-md-block">
     <a href="/profile" class="active"><i class="bi bi-person"></i> Perfil</a>
     <div class="disabled">
         <a href="#"><i class="bi bi-gear"></i> Configurações</a>
