--- a/src/main/resources/static/css/profile.css
+++ b/src/main/resources/static/css/profile.css
@@ -16,6 +16,10 @@ body {
     border-right: 1px solid #dee2e6;
 }
 
+.sidebar.d-none {
+    display: none;
+}
+
 .sidebar a {
     padding: 10px 15px;
     font-size: 16px;
@@ -36,4 +40,12 @@ body {
 #MainContent {
     margin-left: 250px;
     padding: 20px;
+}
+
+/* if the screen size is less than 768px */
+@media screen and (max-width: 768px) {
+    #MainContent {
+        margin-left: 0;
+        padding: 20px;
+    }
 }
